--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@ rebar3.crashdump
 src/*.dot
 src/sql_lex.erl
 src/sqlparse.erl
-test/generated/ct/reliability_*
+test/generated/ct
 test/generated/eunit
 tmp
