removed debug logs during compilation

--- a/rebar.config
+++ b/rebar.config
@@ -68,11 +68,9 @@
 ]}.
 
 {xrl_opts, [
-    {report_warnings, false},
-    {verbose, true}
+    {report_warnings, false}
 ]}.
 
 {yrl_opts, [
-    {report_warnings, false},
-    {verbose, true}
+    {report_warnings, false}
 ]}.
